i created the resume files

--- a/protfolio.html
+++ b/protfolio.html
@@ -44,18 +44,19 @@
     
 <div class="row">
 <div class="col-md-6">
-<a class="btn btn-success" href="https://github.com/mallimuondu/election-platform" role="button">Election Platform</a>    
+<a class="btn btn-success" href="https://github.com/mallimuondu/election-platform" role="button">Election Platform</a> 
 </div>
 <div class="col-md-6">
 <a class="btn btn-primary" href="https://github.com/mallimuondu/super_market" role="button">Super market system</a>        
 </div>
     
 </div>
+<hr>
 <div class="row">
 <div class="col-md-6">
-<a class="btn btn-success" href="">smart calculator</a>    
+<a class="btn btn-success" href="https://github.com/earlycamp/calcul">smart calculator</a>    
 </div>
 <div class="col-md-6">
-<a class="btn btn-primary" href="https://github.com/mallimuondu/super_market" role="button">Super market system</a>        
+<a class="btn btn-primary" href="https://github.com/mallimuondu/qualy-eastate" role="button">Qualyestate</a>        
 </div>
 </div>
