--- a/protfolio.html
+++ b/protfolio.html
@@ -1,8 +1,8 @@
 <html>
 <head>
 <title>Resume</title>
-<link href="Css/bootstrap.min.css" rel="stylesheet">
-<link href="Js/bootstrap.min.js" rel="stylesheet">
+<link href="css/bootstrap.min.css" rel="stylesheet">
+<link href="js/bootstrap.min.js" rel="stylesheet">
 <link href="portfolio.css" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Turret+Road:wght@500&display=swap" rel="stylesheet">
 <link href="https://fonts.googleapis.com/css2?family=Indie+Flower&display=swap" rel="stylesheet">
@@ -20,7 +20,7 @@
         <a class="nav-link" href="index.html">Home</a>
       </li>
       <li class="nav-item">
-        <a class="nav-link" href="hobbies.html">Hobbies</a>
+        <a class="nav-link" href="hobbis.html">Hobbies</a>
       </li>
       </ul>
   </div>
