--- a/hobbis.html
+++ b/hobbis.html
@@ -30,37 +30,30 @@
 
     </div>
     <div class="col-md-4">
-    <h1>Hobbis</h1>
+    <h1>Hobies</h1>
     </div>
     <div class="col-md-4">
     
     </div>
 </div>
 <div class="row">
-    <div class="col-md-4">
+    <div class="col-md-6">
         <div class="card" style="width: 90%;">
-            <img src="img/download.jpeg">
+            <img src="img/IMG-20180408-WA0002.jpg" height="300">
   <div class="card-body">
     <h5 class="card-title">Tennis</h5>
-    <p class="card-text">I have played several matches before.my favoritre tennis playor is Djokovitch.Last year i was number one in the whole kenya in under 8.soo this year i was trsnsferd to under 10 undvenced and under 12.i stated playing tennis sice i was 3 years old</p>
+    <p class="card-text">I have played several matches before.my favoritre tennis playor is Djokovitch.Last year i was number one in the whole kenya in under 8.So this year i was upgraded to under 10 andvanced and under 12.I stated playing tennis sice i was 3 years old</p>
 </div>
 </div>
 
     </div>
-    <div class="col-md-4">
-        <div class="card" style="width: 90%">
-        <img src="img/images%20(1).jpeg">         
-  <div class="card-body">
-    <h5 class="card-title">coding</h5>
-      <p class="card-text">i started codding sice i was 7 years i have been coding for three years.i know Html,css,javascript and i am half way in python</p>
-</div>
-</div>    </div>
-    <div class="col-md-4">
+  
+    <div class="col-md-6">
             <div class="card" style="width: 90%;">
   <div class="card-body">
-      <img src="img/5ed12572f34d0505186b3223.jpeg" width="100%">
+      <img src="img/IMG-20180524-WA0016.jpg" height="350" width="100%">
     <h5 class="card-title">swimming</h5>
-      <p class="card-text">I like swimming.I have won swimming so many time,i can swim free style,breaststroke,backstroke and  butterfly. i go for swimming every friday and also teach my cousins how to swim.I have attended swimming galla and won,but winning is not my oppinion  but sometime not always number one </p>
+      <p class="card-text">I like swimming.I have won swimming so many time,i can swim freestyle,breaststroke,backstroke and  butterfly. I go for swimming every friday and also teach my cousins how to swim.I have attended swimming galla and won. </p>
 </div>
 </div>
     </div>
